--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-theme: jekyll-theme-modernist
+theme: jekyll-theme-cayman
 title: Welcome to Official St. Robert CHS electric vehicle challenge team website
